add codex screen